# legged-trajectory-optimization

./: .gitignore  CMakeLists.txt  README.md
include/: Save2CSV.h  matplotlibcpp.h  plot_trajectories.h
include/constraints/: BaseMotionConstraint.h  DynamicsConstraint.h  HeightMapConstraint.h
include/towr/variables/: spline_holder.h
include/variables/: BaseMotionVariables.h  ForceVariables.h
src/: main.cpp
src/towr/: nodes_variables_phase_based.cc  parameters.cc  phase_durations.cc  spline_holder.cc
